--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,14 @@
     <string name="CHOL_HDL_RATIO">CHOL/HDL RATIO</string>
     <string name="LDL_HDL_RATIO">LDL/HDL RATIO</string>
     <string name="NON_HDL_CHOLESTEROL">NON-HDL CHOLESTEROL</string>
+    <string name="title_activity_hba1c">hba1c</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
 </resources>
