fasting sugar added (ansh)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="A_G">A:G (ratio)</string>
 
 
+    <string name="FASTING_PLSAMA_GLUCOSE">FASTING PLSAMA GLUCOSE (mg/dl)</string>
+
+
 </resources>
